# psychic-guide

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  wuensche_fuer_die_vorlesung.txt
source/: library.cpp  library.h
